--- a/frontend/appflowy_flutter/assets/translations/en.json
+++ b/frontend/appflowy_flutter/assets/translations/en.json
@@ -184,6 +184,10 @@
         "dark": "Dark Mode",
         "system": "Adapt to System"
       },
+      "upload": {
+        "hintText": "Upload a new theme.",
+        "label": "Upload"
+      },
       "theme": "Theme"
     },
     "files": {
